# GLFWInitializer

./: .gitignore  configure.sh  run.sh
src/: CMakeLists.txt  main.cpp
